# learningOpenCV

./: CMakeLists.txt  README.md
include/: objectDetection.hpp  panorama.hpp  testpro.hpp
learningNoteBook/: nms.md
python/: QRdetection.py  objectDetection.py
python/faceDectection/: basic.py
python/fileScan/: fileScan.py  utils.py
src/: main.cpp  objectDetection.cpp  panorama.cpp  testpro.cpp
